--- a/public/stylesheets/navbar.scss
+++ b/public/stylesheets/navbar.scss
@@ -48,3 +48,8 @@ nav li {
   color: white;
   background-color: $app-blue;
 }
+
+.viewalt .home, .viewalt2 .viewtwo {
+  color: black;
+  background-color: $nav-bar-gray;
+}
