add images to template3

--- a/public/html/templates/template1.html
+++ b/public/html/templates/template1.html
@@ -1,6 +1,6 @@
 <div class="template">
   <h2>{{ct1.templateTitle}}</h2>
-  <product-table moveto="ct1.view" template="tablep"  collection="ct1.products" on-send = "ct1.productId(id)">
+  <product-table moveto="ct1.view" template="table"  collection="ct1.products" on-send = "ct1.productId(id)">
   </product-table>
   <p>Rails-generated Json data obtained as ajax request using angularJS retrieveData()</p>
 </div>
