--- a/public/html/templates/template2.html
+++ b/public/html/templates/template2.html
@@ -1,7 +1,8 @@
 <div class="template">
   {{ct2.tgd}}
   <h2>{{ct2.templateTitle}}</h2>
-  <product-table moveto="ct2.view" template ="tablep"  collection ="ct2.products" on-send = "ct2.productId(id)">
+  /bin/bash: q: command not found
+  <product-table moveto = "ct2.view" template = "table" collection = "ct2.products" on-send = "ct2.productId(id)">
   </product-table>
   <p>Rails-generated Json data obtained as ajax request using 
   angularJS $resource (Product.query())</p>
