--- a/public/html/templates/template3.html
+++ b/public/html/templates/template3.html
@@ -1,4 +1,8 @@
 <div class="template">
   <h2>{{ct3.templateTitle}}</h2>
 <p>Hello from {{ct3.templateTitle}}</p>
+  <h3>This image (jareck.jpg) comes from /public/images</h3>
+<img src="./images/jareck.jpg" alt="Jareck Image" style="width:325px;height:260px;">
+  <h3>This image comes from Dropbox</h3>
+<img src="https://dl.dropboxusercontent.com/s/vqjwyvmwu9xq6aq/Boston%20City%20Flow.jpg?dl=0" alt="Boston City" style="width:325px;height:260px;">
 </div>
